Color correction on small strings.

--- a/hostedProjects/KarlstadbussTicketGenerator/stylesheet/global.css
+++ b/hostedProjects/KarlstadbussTicketGenerator/stylesheet/global.css
@@ -48,6 +48,10 @@ body {
     font-size: 2.2em;
 }
 
+.price, .ticketType {
+    color: #7c7c7c;
+}
+
 .topBarRight span {
     display: block;
     font-size: 2.2em;
